--- a/Elements.html
+++ b/Elements.html
@@ -1,10 +1,21 @@
-<h1>Heading 1 </h1>
+<html> 
+<head>
+	<title>Element!!!</title>
+</head>
+<body>
+<h1 style="color:gold; text-decoration: underline;">Heading 1 </h1>
 <h2>Heading 2</h2>
 <p>This is my first paragraph</p>
 <div>
 	<div>
 		<div>
-			<a href="http://skillshare.com"> Visit the skillshare website</a>
+			<a href="http://skillshare.com"target="blank"> Visit the skillshare website</a>
 		</div>
 	</div>
 </div>
+
+<p> Hey there my name is:<br> czsnipe</p>
+
+<img src="test.jpg">
+</body>
+</html>
